# learn_wgpu

./: ARCHITECTURE.md  Cargo.toml  guia.md  test_winit.rs
src/: main.rs
src/interface_pronta_pra_uso/: COMO_USAR.md  demo.rs  mod.rs  renderer.rs
src/menu/: COMO_USAR.md  EXPLICACAO_2D.md  animation.rs  demo.rs  mod.rs  renderer.rs  shader.wgsl  types.rs
src/menu/chess/: mod.rs
src/triangulo_no_meio_da_tela/: EXPLICACAO.md  mod.rs  shader.wgsl  triangulo.rs
