[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.25.10"
glyphon = "0.11.0"
ab_glyph = "0.2.32"
